--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <titl>Dự Án 5</title>
+    <title> lần 2</title>
 </head>
 <body>
-    <h3> Dự án HTML</h3>
+    <h2> thử lần 2</h2>
 </body>
 </html>
