--- a/new1.html
+++ b/new1.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="vi">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> lần 2</title>
+    <title> file 2</title>
 </head>
-
 <body>
-    <h2> thử lần 2</h2>
-    <h2>sửa đổi lần 1</h2>
+    <h2> Xin  Chào Tôi Là Khoa</h2>
 </body>
-
 </html>
